2006-12-25  Marzo Sette Torres Junior <marzojr@yahoo.com>
	A few fixes/updates to the Keyring mod.

2006-12-24  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* miscinf.cc: Removing unneeded debug message.
	* ucbrowse: Lack of std::ios::binary in opening file caused wrong usecode
	  symbol table. Changed to use U7open instead of constructor.

2006-12-23    <jeff@mini.nerble.net>

	* mapedit/shapeedit.cc: Added "Browse" buttons for usecode selection.

2006-12-20  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Increased version to 1.4.03CVS due to the enormous number of changes.
	* Added versioning information to the files loaded through Shapeinfo_lookup.
	* Added two new intrinsics: set_npc_name and set_usecode_fun, as well as
	  documentation for them.
	* shapes/miscinf.*: Added some new data files, with dynamic importing of
	  shapes allowed. See the data files themselves for more information.
	    ++++ Important ++++
	  These data files allow the specification of previously hard-coded data.
	  This hard-coded data will NO LONGER BE PRESENT for new games, which must
	  supply their own versions of the data files instead.
	* gamamgr/bggame.cc, sigame.cc: Updated to use new data files for skins.
	  In BG, also made the character creation screen use a new palette by using
	  palette remapping of the shapes to draw. Consequently, said screen uses
	  shapes from faces.vga (patched with Exult_bg.flx/mr_faces.vga) to draw
	  the multiracial faces.
	* expack.cc: You can now specify a shape number for a file in a script by
	  prefixing the file name with a ':shapenum:'. Shapes following a declared
	  shape will have their numbers assigned starting from the specified shape.
	* shapes/vgafile.*: VGA files now support multiple (more than 2) patches
	  from different sources. Also added support for loading VGA files from
	  within a flx file (such as Exult_bg.flx). Also, VGA files can now import
	  specific shapes from another VGA file and remap the shape number to a