@@ -18410,6 +18410,8 @@ will be added automatically</property>
 
 		      <child>
 			<widget class="GtkTreeView" id="usecodes_treeview">
+			  <property name="width_request">200</property>
+			  <property name="height_request">180</property>
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="headers_visible">True</property>
